# Android-HandGestureRecognition-OpenCv-and-PureJava

./: README.md  import-summary.txt  settings.gradle
aFileChooser/: build.gradle
aFileChooser/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
handGestureApp/: CMakeLists.txt  build.gradle
handGestureApp/src/main/: AndroidManifest.xml
handGestureApp/src/main/java/com/example/Gaurav/: AppInfo.java  BrowseApplicationInfoAdapter.java  DisplayAppList.java  HandGesture.java  HomeActivity.java  InscribedCircle.java  MainActivity.java  MyCameraView.java
handGestureApp/src/main/res/layout/: activity_main.xml  home.xml
openCVLibrary330/: build.gradle
